revamped layout from table to grid view to fix layout issues. Added javascript that allows me to show additional info on button click. Still need to update button info on weapon arsenal page.

--- a/main.css
+++ b/main.css
@@ -46,31 +46,19 @@ body, html {
     color:white;
     text-align: center;
   }
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
 
-  [class*="col-"] {
-    float: left;
+  .grid-container {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: auto auto auto;
+    background-color: slategray;
+    padding: 10px;
+  }
+  
+  .grid-item {
+    background-color: slategray;
     padding: 20px;
-    margin: 100px 20px 20px 200px;
-  }
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  .item-title{
-    text-decoration: underline;
+    font-size: 20px;
     text-align: center;
   }
   input[type=text] {
@@ -91,4 +79,26 @@ textarea{
   width: 550px;
   height: 100px;
   font-size: 15px;
+}
+.collapsible {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 30px;
+}
+.active, .collapsible:hover {
+  background-color:white;
+  color: black;
+  
+}
+.content {
+  padding: 1px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
